[pycodestyle]
max-line-length = 100

[pydocstyle]
ignore = D301, D212, D203

[metadata]
name = equinox
description = Personal Calendar & Diary
url = https://github.com/dpensi/equinox
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Application

[options]
zip_safe = False
include_package_data = True
package_dir=
    =.
packages = find:
setup_requires =
    setuptools_scm>=3.0.0
install_requires =
    astral
    pymeeus

[options.entry_points]
console_scripts =
    equinox = equinox:main

[options.extras_require]
dev =
    pre-commit
    pytest
    pytest-cov